fix: Adjust directory from files

--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
           <div class="project-card">
             
             <a href="#"
-            ><img class="project-img" src="../img/imdb.png" alt="" srcset=""
+            ><img class="project-img" src="./img/imdb.png" alt="" srcset=""
             /></a>
             <p>Clone imdb</p>
           </div>
 
         <div class="project-card">
         <a href="#"
-          ><img class="project-img" src="../img/imdb.png" alt="" srcset=""
+          ><img class="project-img" src="./img/imdb.png" alt="" srcset=""
         /></a>
         <p>Clone imdb</p>
        </div>
