--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
       <div class="projects-cards">
         
           <div class="project-card">            
-            <a href="#"
+            <a href="https://pf-imdbclone.netlify.app"
             ><img class="project-img" src="./img/imdb.png" alt="" srcset=""
             /></a>
             <p>Clone imdb</p>
