--- a/src/index.html
+++ b/src/index.html
@@ -1,43 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portifólio</title>
-    <link rel="stylesheet" href="./styles/styles.css" />
-  </head>
-  <body>
-    <div class="menu">
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="">Sobre</a></li>
-          <li><a href="">Projetos</li></a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Portifólio</title>
+  <link rel="stylesheet" href="./styles/styles.css" />
+  <link rel="stylesheet" href="./styles/normalize.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/6761fe9785.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <!-- <div class="container"> -->
+  <!-- <div class="menu"> -->
+  <nav class="menu">
+    <ul>
+      <li><a href="#">Inicio</a></li>
+      <li><a href="">Projetos</li></a>
+      <li><a href="">Sobre</a></li>
+      <li><a href="">Habilidades</a></li>
+    </ul>
+  </nav>
+  <div class="hero">
+    <p class="typing-animation">Olá, eu sou o Patric =)</p>
+  </div>
+
+
+  <!-- </div> -->
+  <!-- </div> -->
+  <main>
+
+    <div class="skills">
+      <div class="container">
+        <h2 class="title">Habilidades</h2>
+        <ul class="list-skills">
+
+          <li><i class="fab fa-html5"></i><span>HTML</span></li>
+          <li><i class="fab fa-css3-alt"></i><span>CSS</span></li>
+          <!-- <li><span>Delphi</span></li> -->
+          <li><i class="fab fa-js-square"></i><span>Javascript</span></li>
+          <li><i class="fab fa-react"></i><span>React</span></li>
+          <li><i class="fab fa-python"></i><span>Python</span></li>
         </ul>
-      </nav>
+      </div>
     </div>
-    <main>
-        <h2>Projetos</h2>
-      <div class="projects-cards">
-        
-          <div class="project-card">            
-            <a href="https://pf-imdbclone.netlify.app"
-            ><img class="project-img" src="./img/imdb.png" alt="" srcset=""
-            /></a>
-            <p>Clone imdb</p>
+
+    <div class="projects">
+      <div class="container">
+        <h2 class="title">Projetos</h2>
+      </div>
+      <div class="container">
+        <div class="projects-cards">
+          <div class="project-card">
+            <a href="https://pf-imdbclone.netlify.app">
+              <img class="project-img" src="./img/imdb.png" alt="" srcset="" />
+            </a>
+            <div class="project-card-description">
+              <p>Clone do site de filmes IMDB</p>
+            </div>
           </div>
 
           <div class="project-card">
-            <a href="#"
-              ><img class="project-img" src="./img/imdb.png" alt="" srcset=""
-            /></a>
-            <p>Clone imdb</p>
-         </div>   
+            <a href="#"><img class="project-img" src="./img/imdb.png" alt="" srcset="" /></a>
+            <div class="project-card-description">
+              <p>Challenge freecodecamp</p>
+            </div>
+          </div>
 
         </div>
-    </main>
-    <footer>
-        Todos os direitos reservados
-    </footer>
-  </body>
+      </div>
+    </div>
+
+  </main>
+
+  <footer>
+    Todos os direitos reservados (2021)
+  </footer>
+
+</body>
+
 </html>
