--- a/src/index.html
+++ b/src/index.html
@@ -21,11 +21,19 @@
       <li><a href="">Projetos</li></a>
       <li><a href="">Sobre</a></li>
       <li><a href="">Habilidades</a></li>
+      <li><a class="contact" href="">Entre em contato</a></li>
     </ul>
   </nav>
   <div class="hero">
-    <p class="typing-animation">Olá, eu sou o Patric =)</p>
+    <div class="typing-animation">Olá, eu sou o Patric =)
+      <a href=""><span><i class="fab fa-facebook-square"></i></span></a>
+      <a href=""><span><i class="fab fa-linkedin"></i></span></a>
+      <a href=""><span><i class="fas fa-at"></i></span></a>
+    </div>
   </div>
+
+
+
 
 
   <!-- </div> -->
