--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/6761fe9785.js" crossorigin="anonymous"></script>
+  <script src="./scripts/script.js"></script>
 </head>
 
 <body>
@@ -18,29 +19,24 @@
   <nav class="menu">
     <ul>
       <li><a href="#">Inicio</a></li>
-      <li><a href="">Projetos</li></a>
+      <li><a href="#projects">Projetos</li></a>
       <li><a href="">Sobre</a></li>
-      <li><a href="">Habilidades</a></li>
+      <li><a href="#skills">Habilidades</a></li>
       <li><a class="contact" href="">Entre em contato</a></li>
     </ul>
   </nav>
   <div class="hero">
     <div class="typing-animation">Olá, eu sou o Patric =)
-      <a href=""><span><i class="fab fa-facebook-square"></i></span></a>
+      <a href=""><span><i class="fab fa-facebook-square "></i></span></a>
       <a href=""><span><i class="fab fa-linkedin"></i></span></a>
       <a href=""><span><i class="fas fa-at"></i></span></a>
     </div>
   </div>
-
-
-
-
-
   <!-- </div> -->
   <!-- </div> -->
   <main>
 
-    <div class="skills">
+    <div id="skills" class="skills">
       <div class="container">
         <h2 class="title">Habilidades</h2>
         <ul class="list-skills">
@@ -55,7 +51,7 @@
       </div>
     </div>
 
-    <div class="projects">
+    <div class="projects" id="projects">
       <div class="container">
         <h2 class="title">Projetos</h2>
       </div>
@@ -80,6 +76,10 @@
         </div>
       </div>
     </div>
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top" class="slide-top"><i
+        class="fas fa-chevron-up icon-up"></i></button>
+
 
   </main>
 
