Feat: Adicionado o moveit aos projetos desenvolvidos

--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,9 @@
   </nav>
   <div class="hero">
     <div class="typing-animation">Olá, eu sou o Patric =)
-      <a href=""><span><i class="fab fa-facebook-square "></i></span></a>
-      <a href=""><span><i class="fab fa-linkedin"></i></span></a>
-      <a href=""><span><i class="fas fa-at"></i></span></a>
+      <a href="https://www.facebook.com/patric.fonseca.1/"><span><i class="fab fa-facebook-square "></i></span></a>
+      <a href="https://www.linkedin.com/in/patric-fonseca-14451299/"><span><i class="fab fa-linkedin"></i></span></a>
+      <a href="patric.ccomp@gmail.com"><span><i class="fas fa-at"></i></span></a>
     </div>
   </div>
   <!-- </div> -->
@@ -67,9 +67,17 @@
           </div>
 
           <div class="project-card">
-            <a href="#"><img class="project-img" src="./img/imdb.png" alt="" srcset="" /></a>
+            <a href="https://moveit-bay-psi.vercel.app/"><img class="project-img" src="./img/moveit.png" alt=""
+                srcset="" /></a>
             <div class="project-card-description">
-              <p>Challenge freecodecamp</p>
+              <p>Move it</p>
+            </div>
+          </div>
+
+          <div class="project-card">
+            <a href="#"><img class="project-img" src="./img/development.jpg" alt="" srcset="" /></a>
+            <div class="project-card-description">
+              <p>Em desenvolvimento...</p>
             </div>
           </div>
 
