--- a/src/index.html
+++ b/src/index.html
@@ -51,42 +51,45 @@
       </div>
     </div>
 
+
     <div class="projects" id="projects">
       <div class="container">
         <h2 class="title">Projetos</h2>
       </div>
-      <div class="container">
-        <div class="projects-cards">
-          <div class="project-card">
-            <a href="https://pf-imdbclone.netlify.app">
-              <img class="project-img" src="./img/imdb.png" alt="" srcset="" />
-            </a>
-            <div class="project-card-description">
-              <p>Clone do site de filmes IMDB</p>
-            </div>
+      <!-- <div class="container"> -->
+      <div class="projects-cards">
+        <div class="project-card">
+          <a href="https://pf-imdbclone.netlify.app">
+            <img class="project-img" src="./img/imdb.png" alt="" srcset="" />
+          </a>
+          <div class="project-card-description">
+            <p>Clone do site de filmes IMDB</p>
           </div>
-
-          <div class="project-card">
-            <a href="https://moveit-bay-psi.vercel.app/"><img class="project-img" src="./img/moveit.png" alt=""
-                srcset="" /></a>
-            <div class="project-card-description">
-              <p>Move it</p>
-            </div>
-          </div>
-
-          <div class="project-card">
-            <a href="#"><img class="project-img" src="./img/development.jpg" alt="" srcset="" /></a>
-            <div class="project-card-description">
-              <p>Em desenvolvimento...</p>
-            </div>
-          </div>
-
         </div>
+
+        <div class="project-card">
+          <a href="https://moveit-bay-psi.vercel.app/"><img class="project-img" src="./img/moveit.png" alt=""
+              srcset="" /></a>
+          <div class="project-card-description">
+            <p>Move it</p>
+          </div>
+        </div>
+
+        <div class="project-card">
+          <a href="#"><img class="project-img" src="./img/development.jpg" alt="" srcset="" /></a>
+          <div class="project-card-description">
+            <p>Em desenvolvimento...</p>
+          </div>
+        </div>
+
       </div>
     </div>
 
-    <button onclick="topFunction()" id="myBtn" title="Go to top" class="slide-top"><i
-        class="fas fa-chevron-up icon-up"></i></button>
+    <!-- </div> -->
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top" class="slide-top">
+      <i class="fas fa-chevron-up icon-up"></i>
+    </button>
 
 
   </main>
